prometheus/prometheusOperator/custom/mongodb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb-ns
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodb-ns
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      securityContext:
        fsGroup: 999

      containers:
        - name: mongodb
          image: mongo:5.0.24
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          securityContext:
            runAsUser: 999
          volumeMounts:
            - name: data
              mountPath: /data/db

        - name: mongodb-exporter
          image: percona/mongodb_exporter:0.47.2
          args:
            - "--collect-all"
          ports:
            - containerPort: 9216

      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  namespace: mongodb-ns
  labels:
    app: mongodb
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9216"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: mongodb
  ports:
    - name: metrics
      port: 9216
      targetPort: 9216
