prometheus/prometheusOperator/custom/redis.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redis-ns
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: shixiaochuangk8s/redis:7.4.2
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          args:
            - "--requirepass"
            - "123321"          # 设置访问密码
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis-ns
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
